# smirnybot9001

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: pylint.yml
smirnybot9001/: chatbot.py  color_table.py  config.py  overlay.py  sample.conf  smirnyboot9001.py  util.py
smirnybot9001/data/: sample.conf
tests/: bricklink_color_table.html  bricklink_color_table.pickle  bricklink_part_6339079.html  brickset_fig_mk003.html  minimal.conf  test.conf  test_bot.py  test_color_table.py  test_config.py  test_fig_scrape.py  test_part_scrape.py  test_set_scrape.py  test_util.py
